Update repo links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<li><a class="imdb" href="http://www.imdb.com/name/nm0295303/">IMDb</a></li>
 				<li><a class="linkedin" href="https://www.linkedin.com/pub/matt-friedman/51/92b/114">LinkedIn</a></li>
 				<li><a class="twitter" href="https://twitter.com/WarmKitties">Twitter</a></li>
-				<li><a class="github" href="https://github.com/VSEphpbb">Github</a></li>
+				<li><a class="github" href="https://github.com/iMattPro">Github</a></li>
 			</ul>
 		</section>
     </body>
