A little HTML updating and a switch to font icons

--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Matt Friedman</title>
-        <meta name="description" content="Connect with Matt Friedman via Twitter, GitHub, LinkedIn, etc.">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href='http://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Fjalla+One:400,700' rel='stylesheet' type='text/css'>
-		<link href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.3/animate.min.css" rel="stylesheet" type="text/css">
-		<link href="assets/style.css" rel="stylesheet" type="text/css">
-    </head>
-    <body>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="x-ua-compatible" content="ie=edge">
+		<title>Matt Friedman</title>
+		<meta name="description" content="Connect with Matt Friedman via Twitter, GitHub, LinkedIn, etc.">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Fjalla+One:400,700" rel="stylesheet">
+		<link href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.3/animate.min.css" rel="stylesheet">
+		<link href="assets/style.css" rel="stylesheet">
+		<script src="https://kit.fontawesome.com/a930656020.js" crossorigin="anonymous"></script>
+	</head>
+	<body>
 		<section id="container" class="animated bounceInDown">
-			<h1 class="title">Matt Friedman</h1>
-			<p class="sub-title">Music editor. Web designer &amp; programmer.</p>
-			<ul id="social-links">
-				<li><a class="imdb" href="http://www.imdb.com/name/nm0295303/">IMDb</a></li>
-				<li><a class="linkedin" href="https://www.linkedin.com/pub/matt-friedman/51/92b/114">LinkedIn</a></li>
-				<li><a class="twitter" href="https://twitter.com/WarmKitties">Twitter</a></li>
-				<li><a class="github" href="https://github.com/iMattPro">Github</a></li>
+			<h1>Matt Friedman</h1>
+			<p>Music editor. Web designer &amp; programmer.</p>
+			<ul>
+				<li><a title="IMDb" href="https://www.imdb.com/name/nm0295303/"><i class="fab fa-imdb"></i></a></li>
+				<li><a title="LinkedIn" href="https://www.linkedin.com/pub/matt-friedman/51/92b/114"><i class="fab fa-linkedin"></i></a></li>
+				<li><a title="Twitter" href="https://twitter.com/WarmKitties"><i class="fab fa-twitter-square"></i></a></li>
+				<li><a title="GitHub" href="https://github.com/iMattPro"><i class="fab fa-github-square"></i></a></li>
 			</ul>
 		</section>
     </body>
