Update front page text

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<section id="container" class="animated bounceInDown">
 			<h1>Matt Friedman</h1>
-			<p>Music editor. Web designer &amp; programmer.</p>
+			<p>Music Editor | Web Developer</p>
 			<ul>
 				<li><a title="IMDb" href="https://www.imdb.com/name/nm0295303/"><i class="fab fa-imdb"></i></a></li>
 				<li><a title="LinkedIn" href="https://www.linkedin.com/pub/matt-friedman/51/92b/114"><i class="fab fa-linkedin"></i></a></li>
